# -VITA-Virtual-Interview-Training-Assistant-

./: .gitignore  .pre-commit-config.yaml  BUG_FIXES_REPORT.md  FINAL_PROJECT_STATUS.md  PROJECT_STRUCTURE_GUIDE.md  README.md  REORGANIZATION_REPORT.md  VITA_ARCHITECTURE_OPTIMIZATION_PLAN.md  VITA_FRONTEND_BUG_REPORT.md  VITA_语音服务镜像源优化完成报告.md  docker-compose.yml  download_docker.ps1  download_whisper_model.bat  final_cleanup.py  install_docker_guide.md  main.py  reorganize_vita_structure.py  secrets.txt  serve_frontend.py
backend/: .env.local_whisper_example  DUAL_MODEL_IMPLEMENTATION.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  INSTALL_FFMPEG_WINDOWS.md  SOLUTION_SUMMARY.md  VITA_OPTIMIZATION_COMPLETE_REPORT.md  __init__.py  debug_llama.py  env_local_whisper.txt  fix_imports.py  fix_whisper_models.py  install_local_whisper.bat  install_local_whisper.sh  install_with_mirrors.bat  install_with_mirrors.py  install_with_mirrors.sh  main.py  main_fixed.py  main_simple.py  pip.ini  pyproject.toml  pytest.ini  realtime_voice_router.py  requirements.txt  run_backend.py  simple_test.py  test_whisper_web.html  ws_router.py
backend/api/: health.py  model_manager.py  modules.py  multimodal_interview_api.py
backend/core/: __init__.py  analysis.py  audio_processor.py  cache_manager.py  chat.py  client_manager.py  config.py  doubao_realtime_speech.py  dynamic_switch.py  enhanced_realtime_speech.py  error_handler.py  exceptions.py  health_monitor.py  logger.py  metrics.py  middleware.py  module_registry.py  multimodal_interview.py  performance_monitor.py  prompts.py  qwen_llama_client.py  realtime_speech.py  redis_cache.py  report.py  speech.py  tts_fallback.py  tts_service.py  whisper_model_manager.py
backend/core/tts_engines/: __init__.py  base.py  edge_engine.py  pyttsx3_engine.py
backend/models/: api.py  session.py
backend/static/: edge_chrome_voice_test.html  vita_audio_test_v2.html
backend/whisper/: __init__.py  __main__.py  audio.py  decoding.py  model.py  setup.py  timing.py  tokenizer.py  transcribe.py
backend/whisper-main/whisper-main/: pyproject.toml
backend/whisper/normalizers/: __init__.py  english.py
docs/: API_CONFIGURATION.md  AUDIO_TROUBLESHOOTING.md  CHANGELOG.md  DEVELOPMENT_SUMMARY.md  DIGITAL_HUMAN_IMPLEMENTATION.md  DIGITAL_HUMAN_TESTING_REPORT.md  DIGITAL_HUMAN_UPGRADE_SUMMARY.md  FIX_SUMMARY.md  MODULE_INTEGRATION_COMPLETE_REPORT.md  OPENAI_KEY_SETUP_GUIDE.md  OPTIMIZATION_COMPLETE_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE_GUIDE.md  QUICK_FIX_SUMMARY.md  QWEN_PRIORITY_FIX_SUMMARY.md  REALTIME_VOICE_OPTIMIZATION_REPORT.md  REAL_TIME_VOICE_FIXES.md  REAL_TIME_VOICE_IMPLEMENTATION.md  SETUP_COMPLETE.md  TEST_EXECUTION_REPORT.md  VITA_API_ARCHITECTURE.md  VITA_ARCHITECTURE_IMPROVEMENT_REPORT.md  VITA_BUG_FIX_SUMMARY.md  VITA_COMPREHENSIVE_ARCHITECTURE_REVIEW.md  VITA_CORRECTED_SUMMARY.md  VITA_DEEP_CODE_ANALYSIS.md  VITA_LOCAL_SPEECH_TEST_REPORT.md  VITA_PROJECT_ANALYSIS_CORRECTED.md  VITA_PROJECT_COMPLETE_TEST_GUIDE.md  VITA_QUICKSTART_CN.md  VITA_SPEECH_SYNTHESIS_FIX_REPORT.md  VOICE_CONVERSATION_FIXES_SUMMARY.md  VOICE_FEATURES.md  VOICE_IMPLEMENTATION_GUIDE.md  VOICE_INTERVIEW_DEBUG_GUIDE.md  VOICE_INTERVIEW_FIX_GUIDE.md  WHISPER_OFFLINE_DEPLOYMENT.md  WHISPER_OFFLINE_SETUP.md  digital_human_expression_test_report.md  openai_cleanup_report.md  (+6 more)
frontend/: DIGITAL_HUMAN_DEBUGGING.md  Dockerfile  PROBLEM_SOLVED.md  SELECTION_OPTIMIZATION.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tailwind.config.js  vite.config.ts
scripts/: __init__.py  clean_api_keys.py  configure_proxy.bat  download_faster_whisper.py  download_whisper_deps.bat  download_whisper_deps.sh  fix_vita_bugs.bat  fix_vita_bugs.ps1  install_whisper_offline.bat  install_whisper_offline.sh  offline_install_helper.bat  (+22 more)
(+55 files in other folders)
