[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper"
version = "0.1.0"
description = "Whisper speech recognition module for VITA"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tqdm",
    "more-itertools",
    "transformers>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scipy",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["whisper*"] 